Update travis script

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,7 @@ osx_image: xcode8
 xcode_project: TNSlider/TNSlider.xcodeproj
 
 script:
-  - xcodebuild build -project TNSlider/TNSlider.xcodeproj -scheme 'Decodable-iOS' -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
-
-script:
   - set -o pipefail
   - xcodebuild -version
   - xcodebuild -showsdks
-  - xcodebuild -workspace Fusuma.xcworkspace -scheme FusumaExample -sdk iphonesimulator -destination 'OS=10.0,name=iPhone 6S Plus' ONLY_ACTIVE_ARCH=NO build
+  - xcodebuild build -project TNSlider/TNSlider.xcodeproj -scheme 'TNSlider' -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
